--- a/style.css
+++ b/style.css
@@ -3,29 +3,61 @@
     padding:0;
     font-family: 'Outfit', sans-serif;
 }
+html{
+    box-sizing: border-box;
+    text-align: center;
+}
+*, *:before, *:after{
+    box-sizing: inherit;
+}
 body{
-    display: block;
+    background-image:url("design/desktop-design.jpg") ;
+    /* background-color:rgb(204, 255, 255); */
+    width: 100vw;
+    height: 100vh;
+    padding:10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
 }
 .content-all{
-    margin:0 auto;
-    background-color: brown;
-    border-radius: 16px;
-    height: 90%;
-    width: 350px;
-    display:flex;
+    max-width: 320px;
+    align-self: center;
+    background-color: rgba(255, 0, 0, .5 );
+    margin-top: 11%;
+    aspect-ratio: .64;
+    border-radius: 18px;
+    display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    align-content: center;
     align-items: center;
 }
-.content-all img{
-    margin: 10%;
+main img{
+    border-radius: 9px;
     width: 90%;
+    margin:5%;
+    height: auto;
     align-self: center;
-    border-radius: 8px;
+
 }
 .content-text{
-    height: 40%;
-    text-align: center;
-    max-width: 300px;
+    margin: 7%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+h1{
+    font-size: 1.4rem;
+    margin-bottom: 10%;
+}
+p{
+    font-size: .95rem;
     
+    max-width: 95%;
+    margin:0 auto;
 }
